--- a/TradeLog/View/Description.xaml
+++ b/TradeLog/View/Description.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TradeLog.View"
         mc:Ignorable="d"
-        Title="Trade Napló" Height="500" Width="800" MinWidth="800" MinHeight="500" MaxWidth="800" MaxHeight="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+        Title="Trade Napló" Height="500" Width="800" MinWidth="800" MinHeight="500" MaxWidth="800" MaxHeight="500" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Icon="/TradeLog;component/Resource/tax.png">
 
     <!--#region Resources-->
     <Window.Resources>
