--- a/TradeLog/View/NewUserView.xaml
+++ b/TradeLog/View/NewUserView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TradeLog.View"
         mc:Ignorable="d"
-        Title="NewUserView" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="Transparent" ResizeMode="NoResize" WindowStyle="None" AllowsTransparency="True">
+        Title="NewUserView" Height="600" Width="800" WindowStartupLocation="CenterScreen" Background="Transparent" ResizeMode="NoResize" WindowStyle="None" AllowsTransparency="True" Icon="/TradeLog;component/Resource/tax.png">
 
     <!--#region Resources-->
     <Window.Resources>
